# afcfta-live

./: .coverage  .env  .env.bak  .env.example  .env.prod  .env.sentry.example  .gitignore  AGENTS.md  AIS_Initial_Prompt_v2.md  AIS_Parser_Reliability_Handbook.md  AIS_Vibecoding_Handbook.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT_BRIEF.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.sentry.yml  docker-compose.yml  pyproject.toml  run_full_pipeline.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.hypothesis/constants/: 02bb8f3413a0e047  067dfcae66d5cc03  0732433117c4ff92  076834791fe701da  084d49d47cb5aa70  10ffad48eb24a85f  127615a74528b3ca  154dd8e42330a52f  178d81d640c89d06  19c4d8d1491755ef  19fdd72d088275f5  1dbedef126f1d7cb  201a4a32c9d3423d  2334de6192624de9  24442eaefdef65c1  26acf0dadc34a185  29702cee5152f99e  298f04dabc7f2ef8  2d3f98d51318b3e0  2e10891da69f85e6  2e99b42429439db1  30c97d8c776de690  35ff6bd03b61e506  3b2516053be0d10f  3efedb2471814497  425fbb043d4c89de  443c2154dff6f85c  44c5a5044a233204  45838e007dac7950  479d9e51d75c015f  489215cb73fc6bb5  4ab328d74a9ba6d5  4af2704d98269465  4b6223e2b8bb9b75  4bf7f74ecbeec777  50ab47fc66a079fb  5102dfb33823d547  54f4633767c6fb2b  5a7ba889a5d89c1a  5ca289409fe99e2b  (+91 more)
AI Agent Reference Folder/: AIS_Claude_Code_Prompt_Handbook.md  AIS_Claude_Code_Supplement.md
AI Agent Reference Folder/dev docs/: README.md  Readiness Checklist.md
afcfta_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: AGENTS.md  env.py
alembic/versions/: 0001_initial_empty.py  0002_create_hs6_product.py  0003_create_hs6_psr_applicability.py  0003_create_provenance_layer.py  0003_create_rules_layer.py  0004_create_rules_layer.py  0005_create_tariff_layer.py  0006_create_status_layer.py  0007_create_evidence_layer.py  0008_create_case_layer.py  0009_create_evaluation_audit_layer.py  0010_create_intelligence_layer.py  0011_expand_checktype.py  0012_evidence_effective_dates.py  0013_evaluation_decision_snapshot.py
app/: __init__.py  config.py  local_db.py  main.py
app/api/: deps.py  router.py
app/core/: AGENTS.md  __init__.py  cache.py  countries.py  entity_keys.py  enums.py  exceptions.py  fact_keys.py  failure_codes.py  http_status.py  load_test_fixtures.py  logging.py  utils.py
app/db/: base.py  session.py
app/repositories/: AGENTS.md  cases_repository.py  evaluations_repository.py  evidence_repository.py  hs_repository.py  intelligence_repository.py  rules_repository.py  sources_repository.py  status_repository.py  tariffs_repository.py
app/schemas/: AGENTS.md  assessments.py  audit.py  cases.py  common.py  evaluations.py  evidence.py  health.py  hs.py  intelligence.py  rules.py  sources.py  status.py  tariffs.py
app/services/: AGENTS.md  audit_service.py  classification_service.py  eligibility_service.py  evidence_service.py  expression_evaluator.py  fact_normalization_service.py  general_origin_rules_service.py  intelligence_service.py  rule_resolution_service.py  status_service.py  tariff_resolution_service.py
data/: AGENTS.md  HS2022toHS2017ConversionAndCorrelationTables.xlsx
data/processed/: AGENTS.md
data/raw/: AGENTS.md
data/staged/: AGENTS.md  hs6_product.csv
docs/: AGENTS.md  AIS_v01_Quick_Slice_Vibecoding_Prompts.md  Appendix_IV_Parser_Vibecoding_Prompts.md  Canonical_Corpus.md  Concrete Contract.md  Expression_grammar.md  FastAPI_layout.md  Join Strategy.md  README.md  afcfta_corpus_parsing_agent_spec.md
docs/api/: eligibility-api.md  endpoints.md  error-codes.md  examples.md  overview.md
docs/concepts/: architecture-overview.md  data-provenance.md  how-eligibility-works.md  rules-of-origin.md  status-and-confidence.md
docs/corpus/: INGESTION_LOG.md  MANIFEST.md  README.md
docs/dev/: AFCFTA-LIVE_REPO_AUDIT_2026-03-23.md  AIS_v01_delivery_vibecoding_prompts.md  Backend Hardening — Vibecoding Prompts.md  Building out.docx  Decision Renderer — Vibecoding Prompts.md  NIM Integration — Vibecoding Prompts.md  NIM Readiness — Vibecoding Prompts.md  Post-Audit Hardening — Vibecoding Prompts.md  Pre-NIM Gate Closure — Vibecoding Prompts.md  Production Gate — Vibecoding Prompts.md  Production Readiness — Vibecoding Prompts.md  README.md  Security & Resilience Hardening — Vibecoding Prompts.md  audit_prompt.md  conversation-design.md  conversation-failure-modes.md  setup.md  (+8 more)
eval/: AGENTS.md
files (6)/: AIS_All_AGENTS_MD_Files.md  split_agents.sh
frontend/: .env.bak  .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
pipelines/: AGENTS.md
schemas/: AGENTS.md
scripts/: AGENTS.md  extract_unctad_afcfta.py  load_hs6_backbone.py  local_gate_runner.py  run_verification.py  seed_data.py  seed_psr_rules.py
tests/: AGENTS.md  __init__.py  conftest.py  contract_constants.py
(+205 files in other folders)
