[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "afcfta-intelligence"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "alembic",
    "python-dotenv",
    "pdfplumber",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis>=6.100",
    "httpx",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis>=6.100",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require the integration test stack",
]

[tool.coverage.run]
# Measure coverage of the application source tree only, not tests or scripts.
source = ["app"]
omit = [
    "app/__init__.py",
    "app/db/models/__init__.py",
]

[tool.coverage.report]
# 75 % is the measured first-pass floor: unit tests alone reach 84 % and the
# integration run is expected to be comparable once repository paths are added.
# 75 % leaves headroom for DB-dependent repository lines only reachable with a
# live stack, while still catching real regressions.
# Do not raise this number further until a measured integration run confirms it.
fail_under = 75
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.\\s*$",
]

[tool.coverage.xml]
output = "artifacts/coverage.xml"

[tool.coverage.html]
directory = "artifacts/coverage-html"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]